# DiskMELTS

./: .gitignore  Fitting.py  LICENSE  Plotting.py  README.md  Trainmodel.py  Validation.py  dev_v1_pt_validation.py  dev_v1_realobs.py  environment.yaml  pyproject.toml  readthedocs.yaml  test.py
.github/workflows/: tests.yml
.obsidian/: workspace.json
Paper/: paper.bib  paper.md
Realobs_data/Consub_data/: AS209_1d_v8.2_csub.csv  CITau_1d_v8.2_csub.csv  FZTau_1d_v8.2_csub.csv  GKTau_1d_v8.2_csub.csv  GQLup_1d_v8.2_csub.csv  (+4 more)
Trained_model/: net_13C12CH2_forward_11to19.pt  net_13CO2_forward_11to19.pt  net_C2H2_forward_11to19.pt  net_CO2_forward_11to19.pt  net_H2O_forward_11to19.pt  net_HCN_forward_11to19.pt
docs/: conf.py  requirements.txt
examples/: dev_v1_pt_validation.py  dev_v1_realobs.py  realobs_validation.py
notebooks/: Example_Fitting copy.ipynb  Example_Fitting.ipynb  Example_Training_Validation.ipynb
paper/: paper.bib  paper.md
realobs_results/: J16120505_C2H2_HCN_fit_params.csv  J16120505_C2H2_HCN_fit_spectrum.csv  J16120505_C2H2_HCN_fit_top.csv  J16120505_C2H2_HCN_running.csv  J16120505_CO2_fit_params.csv  J16120505_CO2_fit_spectrum.csv  J16120505_CO2_fit_top.csv  J16120505_H2O_fit_params.csv  J16120505_H2O_fit_spectrum.csv  J16120505_H2O_fit_top.csv  J16120505_H2O_running.csv  J16120505_final_running.csv  J16142029_H2O_fit_params.csv  J16142029_H2O_fit_spectrum.csv  J16142029_H2O_fit_top.csv  J16142029_final_running.csv
tests/: conftest.py  test_detection.py  test_imports.py  test_io.py  test_mlp.py  test_smoke.py  test_workflows.py
(+46 files in other folders)
